Closed Bug 201370 Opened 21 years ago Closed 21 years ago

TLS intolerance detection broken

Categories

(Core :: Networking: HTTP, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.4beta

People

(Reporter: KaiE, Assigned: darin.moz)

References

()

Details

(Keywords: topembed)

Attachments

(1 file)

edit/prefs/privacy/ssl:
  make sure SSL2, SSL3, TLS are all enabled

Go to
  https://webmail.wittenberg.edu

With Mozilla 1.2: 
  works
  (You can watch the statusbar to see that Mozilla
   tries to connect twice, caused by the TLS intolerance detection)

With Mozilla 1.3 or recent trunk: 
  error message "Document contains no data"

Expected behaviour:
  The connection should succeed


The connection works after one disables TLS, forcing PSM not to use TLS.
my bug.  i busted this.
Assignee: ssaux → darin
Component: Client Library → Networking: HTTP
Product: PSM → Browser
QA Contact: bmartin → httpqa
Target Milestone: --- → mozilla1.4beta
Version: unspecified → Trunk
Severity: normal → critical
Status: NEW → ASSIGNED
Flags: blocking1.4b?
Keywords: nsbeta1, topembed
Priority: -- → P1
Attached patch v1 patchSplinter Review
Attachment #120053 - Flags: review?(kaie)
Comment on attachment 120053 [details] [diff] [review]
v1 patch

Thanks for the patch! I tested it, it works for me.

r=kaie
Attachment #120053 - Flags: review?(kaie) → review+
Attachment #120053 - Flags: superreview?(alecf)
Comment on attachment 120053 [details] [diff] [review]
v1 patch

sr=alecf
Attachment #120053 - Flags: superreview?(alecf) → superreview+
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Flags: blocking1.4b?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: