fixes bug 201370 "TLS intolerance detection broken" r=kaie sr=alecf